workspace-sf/force-app/main/default/objects/ProdutoConfiguracao__c/ProdutoConfiguracao__c.object-meta.xml
<CustomObject>
    <description>Objeto responsável por armazenar os produtos que serão exibidos ao usuário no orçamento</description>
    <label>Produto da configuração</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Produtos da configuração</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>