workspace-sf/force-app/main/default/objects/ProdutoConfiguracao__c/fields/Configuracao__c.field-meta.xml
<CustomField>
    <fullName>Configuracao__c</fullName>
    <label>Configuração</label>
    <referenceTo>Configuracao__c</referenceTo>
    <relationshipLabel>Produtos da configuração</relationshipLabel>
    <relationshipName>ProdutosConfiguracao</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>