workspace-sf/force-app/main/default/objects/ProdutoConfiguracao__c/fields/Editavel__c.field-meta.xml
<CustomField>
    <fullName>Editavel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Editável</label>
    <type>Checkbox</type>
</CustomField>